# whisper-stt

./: .gitignore  CLAUDE.md  README.md  config.yaml.example  pyproject.toml  requirements.txt
.claude/rules/: cli.md  exporters.md  tests.md
dev-docs/: architecture.md  backlog-diarization-quality.md  debugging_results.md  debugging_whisper.md  dev-guide.md  module-reference.md  testing.md
docs/: PRD.md  SPEC.md  _discovery-log.md  api.md  data-formats.md
docs/decisions/: ADR-001-tech-stack.md
stt/: __init__.py  config.py  data_models.py  exceptions.py  exit_codes.py
stt/cli/: app.py  batch.py  models_cmd.py  transcribe.py
stt/core/: aligner.py  audio.py  batch.py  diarizer.py  gpu_utils.py  pipeline.py  speaker_hints.py  subprocess_runner.py  transcriber.py
stt/exporters/: __init__.py  json_export.py  srt_export.py  txt_export.py
tests/unit/: test_aligner.py  test_audio_preprocess.py  test_audio_validation.py  test_batch.py  test_batch_runner.py  test_cli_app.py  test_cli_batch.py  test_cli_models.py  test_cli_transcribe.py  test_config.py  test_data_models.py  test_diarizer.py  test_edge_cases.py  test_exit_codes.py  test_export_dispatch.py  test_gpu_utils.py  test_json_export.py  test_models_cmd.py  test_pipeline.py  test_smoke.py  test_speaker_hints.py  test_srt_export.py  test_subprocess_runner.py  test_transcriber.py  test_txt_export.py
